envoy/envoy/config/filters/network_filters/envoy.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:  { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: jtroute
                  response_headers_to_add:
                    - header:
                        key: myname
                        value: chengzw
                    - header:
                        key: age
                        value: "18"
                  virtual_hosts:
                    - name: myhost
                      domains: ["abc.com"]
                      routes:
                        - match: {prefix: "/"}
                          route: {cluster: jtthink_cluster_config}
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: jtthink_cluster_config
      connect_timeout: 1s
      type: Static
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: jtthink_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 10.88.0.2
                      port_value: 80
